# saarthi

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml  railway.toml  requirements.txt
backend/app/: agents.py  analytics.py  data.py  heartbeat.py  main.py  suitability.py  voice.py
backend/saarthi_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: benchmark.py
backend/tests/: test_core.py
docs/: benchmark-results.json  holdout-results.json  integration-architecture.md  performance-report.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: pcm-player-processor.js  saarthi-avatar.glb
frontend/src/: App.jsx  api.js  i18n.js  styles.css  useSpeech.js  useVoiceSession.js
frontend/src/components/: Avatar.jsx  Avatar3D.jsx  Chat.jsx  Dashboard.jsx  Household.jsx  Humsafar.jsx  Login.jsx  RMConsole.jsx
scripts/: deploy-aws-apprunner.ps1  deploy-aws-ec2.ps1  set-github-actions-env.ps1  start-cloudflare-tunnel.ps1
